--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 RSS: false
 # weibo_username:     
 # zhihu_username:     
-github_username:    qiubaiying
+github_username:    guuguo
 # facebook_username:  
 jianshu_username:   fc0752919a79
 #twitter_username:   
