--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ github_repo: "https://github.com/guuguo/guuguo.github.io.git" # you code reposit
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "缓步慢行"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
@@ -54,36 +54,6 @@ kramdown:
   input: GFM                            # use Github Flavored Markdown !important
 
 
-
-# # 评论系统
-# # Disqus（https://disqus.com/）
-# # disqus_username: qiubaiying
-
-# # Gitalk
-# gitalk:
-#   enable: true    #是否开启Gitalk评论
-#   clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-#   clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
-#   repo: guuguo.github.io    #仓库名称
-#   owner: guuguo    #github用户名
-#   admin: guuguo
-#   distractionFreeMode: true #是否启用类似FB的阴影遮罩
-
-
-# # 统计
-
-# # Analytics settings
-# # Baidu Analytics
-# ba_track_id: b50bf2b12b5338a1845e33832976fd68
-
-# # Google Analytics
-# ga_track_id: 'UA-90855596-1'            # Format: UA-xxxxxx-xx
-# ga_domain: guuguo.github.io               # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
-
-
-
-
-
 # Featured Tags
 featured-tags: true                     # 是否使用首页标签
 featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
@@ -95,11 +65,3 @@ chrome-tab-theme-color: "#000000"
 service-worker: true
 
 
-
-# Friends
-friends: [
-    {
-        title: "简书·吃人的锅",
-        href: "http://www.jianshu.com/u/fc0752919a79"
-    }
-]
