--- a/_config.yml
+++ b/_config.yml
@@ -3,46 +3,35 @@ title: guuguo
 SEOTitle: guuguo的博客
 header-img: img/post-bg-desk.jpg
 email: guuguo@qq.com
-description: "不忘初心，踏踏实实，一步一个脚印"
-keyword: "guuguo, guuguo Blog, 锅锅的博客, guodeqing, 郭德清, andorid, 安卓"
-url: "http://guuguo.github.io"          # your host, for absolute URL
-baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/guuguo/guuguo.github.io.git" # you code repository
+keyword: 'guuguo, guuguo Blog, 锅锅的博客, guodeqing, 郭德清, andorid, 安卓'
+url: 'http://guuguo.github.io' # your host, for absolute URL
+baseurl: '' # for example, '/blog' if your blog hosted on 'host/blog'
+github_repo: 'https://github.com/guuguo/guuguo.github.io.git' # you code repository
 
 # Sidebar settings
-sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "缓步慢行"
-sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
-
-
+sidebar: true # whether or not using Sidebar.
+sidebar-about-description: '缓步慢行'
+sidebar-avatar: /img/about-BY-gentle.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # SNS settings
 RSS: false
-# weibo_username:     
-# zhihu_username:     
+# weibo_username:
+# zhihu_username:
 github_username: guuguo
-# facebook_username:  
+# facebook_username:
 jianshu_username: fc0752919a79
-#twitter_username:   
-
-
-
+#twitter_username:
 
 # Build settings
 # from 2016, 'pygments' is unsupported on GitHub Pages. Use 'rouge' for highlighting instead.
 permalink: pretty
 paginate: 10
-exclude: ["less","node_modules","Gruntfile.js","package.json","README.md"]
-anchorjs: true                          # if you want to customize anchor. check out line:181 of `post.html`
-
-
+exclude: ['less', 'node_modules', 'Gruntfile.js', 'package.json', 'README.md']
+anchorjs: true # if you want to customize anchor. check out line:181 of `post.html`
 
 # Gems
 # from PR#40, to support local preview for Jekyll 3.0
 gems: [jekyll-paginate]
-
-
-
 
 # Markdown settings
 # replace redcarpet to kramdown,
@@ -51,17 +40,12 @@ gems: [jekyll-paginate]
 markdown: kramdown
 highlighter: rouge
 kramdown:
-  input: GFM                            # use Github Flavored Markdown !important
-
+  input: GFM # use Github Flavored Markdown !important
 
 # Featured Tags
-featured-tags: true                     # 是否使用首页标签
-featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
-
-
+featured-tags: true
+featured-condition-size: 1 # 相同标签数量大于这个数，才会出现在首页
 
 # Progressive Web Apps
-chrome-tab-theme-color: "#000000"
+chrome-tab-theme-color: '#000000'
 service-worker: true
-
-
