--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: guuguo
 SEOTitle: guuguo的博客
 header-img: img/post-bg-desk.jpg
 email: guuguo@qq.com
-keyword: 'guuguo, guuguo Blog, 锅锅的博客, guodeqing, 郭德清, andorid, 安卓'
+xkeyword: 'guuguo, guuguo Blog, 锅锅的博客, guodeqing, 郭德清, andorid, 安卓'
 url: 'http://guuguo.github.io' # your host, for absolute URL
 baseurl: '' # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: 'https://github.com/guuguo/guuguo.github.io.git' # you code repository
@@ -11,7 +11,7 @@ github_repo: 'https://github.com/guuguo/guuguo.github.io.git' # you code reposit
 # Sidebar settings
 sidebar: true # whether or not using Sidebar.
 sidebar-about-description: '缓步慢行'
-sidebar-avatar: /img/about-BY-gentle.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/about-guuguo-gentle.jpg # use absolute URL, seeing it's used in both `/` and `/about/`
 
 # SNS settings
 RSS: false
